Управление складами фронтенд
